overflow fix

--- a/app/static/result.css
+++ b/app/static/result.css
@@ -26,7 +26,7 @@
 }
 
 .book-summary {
-    overflow: scroll;
+    overflow-y: scroll;
     text-align: left;
 }
 
